--- a/ProjetoComIdentity/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProjetoComIdentity/Areas/Identity/Pages/Account/Register.cshtml
@@ -17,6 +17,19 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+
+            <!--  Código add para fazer o claims do usuário através do cargo -->
+            <div class="form-group">
+                <label asp-for="Input.Cargo"> </label>
+                    <select asp-for="Input.Cargo" class="form-control">
+                        <option value=""></option>
+                        <option value="Gerente">Gerente</option>
+                        <option value="Empregado">Empregado</option>
+                    </select>
+                    <span asp-validation-for="Input.Cargo" class="text-danger"></span>
+
+            </div>
+
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
